--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,23 @@
     </button>
   <% end %>
     <div class="collapse navbar-collapse" id="navbarCollapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto mb-2 mb-md-0">
+    <% if user_signed_in? %>
+        <li class="nav-item active">
+          <div class="nav-link" aria-current="page" ><%= link_to "マイページ", "#", class: "text-reset text-decoration-none" %></div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link"><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "text-reset text-decoration-none" %></div>
+        </li>
+        <% else %>
+        <li class="nav-item active">
+          <div class="nav-link" aria-current="page" ><%= link_to "新規登録", new_user_registration_path , class: "text-reset text-decoration-none" %></div>
+        </li>
+        <li class="nav-item">
+          <div class="nav-link"><%= link_to 'ログイン', new_user_session_path, class: "text-reset text-decoration-none" %></div>
+        </li>
+      <% end %>
+    </ul>
     </div>
   </div>
 </nav>
