--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
     <ul class="navbar-nav mr-auto mb-2 mb-md-0">
     <% if user_signed_in? %>
         <li class="nav-item active">
-          <div class="nav-link" aria-current="page" ><%= link_to "マイページ", "#", class: "text-reset text-decoration-none" %></div>
+          <div class="nav-link" aria-current="page" ><%= link_to "#{current_user.nickname}", "#", class: "text-reset text-decoration-none" %></div>
         </li>
         <li class="nav-item">
           <div class="nav-link"><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "text-reset text-decoration-none" %></div>
@@ -19,6 +19,9 @@
         <% else %>
         <li class="nav-item active">
           <div class="nav-link" aria-current="page" ><%= link_to "新規登録", new_user_registration_path , class: "text-reset text-decoration-none" %></div>
+        </li>
+        <li class="nav-item active">
+          <div class="nav-link" aria-current="page" ><%= link_to 'ゲストログイン（閲覧用）', tweets_guest_sign_in_path, method: :post, class: "text-reset text-decoration-none" %></div>
         </li>
         <li class="nav-item">
           <div class="nav-link"><%= link_to 'ログイン', new_user_session_path, class: "text-reset text-decoration-none" %></div>
