新規投稿画面へのpathを設定

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,7 +6,7 @@
         <p class="font-weight-light">記事を発信しよう</p>
         <p class="lead text-muted">あなただけの記事を書いてみよう</p>
         <h1>
-          <%= link_to "新規投稿", "#", class: "text-reset text-decoration-none" %>
+          <%= link_to "新規投稿", new_tweet_path, class: "text-reset text-decoration-none" %>
         </h1>
       </div>
     </div>
