--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,27 @@
       </div>
     </div>
   </section>
-  
+
+  <h1 class="text-center rounded-pill bg-white border border-primary ">↓↓最近の投稿(６件)↓↓</h1>
+
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <% @tweet.each do |tweet| %>
+        <%= link_to tweet_path(tweet[:id]), class: "text-reset text-decoration-none" do %>
+        <div class="col">
+          <div>
+            <svg class="display-block"><%= image_tag tweet.image %><rect width="100%" height="100%" fill="#55595c"/></svg>
+          </div>
+          <div class="card-body d-flex justify-content-center">
+              <p class="card-text"><%= tweet.title %></p>
+          </div>
+        </div>
+        <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </main>
 
 <%= render "shared/footer" %>
