ビューの設定

--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/header" %>
+
 <section class="py-5">
   <main class="main">
     <div class="inner">
@@ -10,15 +11,14 @@
 
         <% if user_signed_in? && current_user.id == @tweet.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", "#", method: :get, class: :prototype__btn %>
-          <%= link_to "削除する", "#", method: :delete, class: :prototype__btn %>
+          <%= link_to "編集する", edit_tweet_path(@tweet.id), method: :get, class: :prototype__btn %>
+          <%= link_to "削除する", "/tweets/#{@tweet.id}", method: :delete, class: :prototype__btn %>
         </div>
         <% end %>
 
         <div class="prototype__image">
           <%= image_tag @tweet.image %>
         </div>
-
 
         <div class="text-center">
           <p class="text-center">カテゴリ名</p>
