--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -34,6 +34,27 @@
             <%= @tweet.text %>
             </p>
           </div>
+        </div>
+
+        <% if current_user %>
+          <div class="prototype__comments">
+          <%= form_with(model: [@tweet, @comment], class: 'js-form') do |f| %>
+            <div class="field">
+              <%= f.label :text, "コメント" %><br />
+              <%= f.text_field :text %>
+            </div>
+            <div class="actions">
+              <%= f.submit "コメントする", class: :form__btn %>
+            </div>
+          <% end %>
+          </div>
+        <% end %>
+        <ul class="messages ">
+          <% @comments.each do |comment| %>
+          <li class="message" ><p><%= comment.text %></p></li> 
+          <% end %>
+        </ul>
+      </div>
     </div>
   </main>
 </section>
