--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,12 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
         <h1><%= "#{@user.nickname}さんのページ"%></h1>
+        <h3 class="font-weight-light"><%= render 'stats' %></h3>
+        <p ><% unless user_signed_in?  %>
+            <% else %>
+            <%= render "relationships/follow_button", user: @user %>
+            <% end %></p>
+        <p>
         <% unless user_signed_in?  %>
         <% else %>
           <% if @user.id == current_user.id %>
